# Wick

./: .gitignore  .gitmodules  CMakeLists.txt  NOTICE  README.md  pytest.ini  test_hash.ps1  test_hash.py  wax_control.bat  wax_control.ps1
docker/: docker-compose.yml
docs/: blueprint-roundtrip-prompt.md  wax-agent-guide.md  wax-api-reference.md  wax-rag-usage-prompt.md
fixtures/parity/: README.md
fixtures/parity/swift/: README.md  swift_open_fail_bad_footer_magic.mv2s  swift_valid_compressed_lz4.mv2s  swift_valid_compressed_lz4.mv2s.expected  swift_valid_empty.mv2s.expected  swift_valid_payload.mv2s  swift_valid_payload.mv2s.expected  swift_verify_fail_payload_checksum.mv2s  swift_verify_fail_payload_checksum.mv2s.expected
fixtures/parity/synthetic/: synthetic_open_fail_bad_footer_magic.mv2s.expected  synthetic_open_fail_lex_manifest_missing_segment.mv2s  synthetic_open_fail_lex_manifest_missing_segment.mv2s.expected  synthetic_valid_empty.mv2s  synthetic_valid_payload.mv2s  synthetic_valid_payload.mv2s.expected  synthetic_verify_fail_payload_checksum.mv2s
hive_sandbox/: start_wax_server.bat
include/waxcpp/: access_stats.hpp  answer_extractor.hpp  embedding_memoizer.hpp  embeddings.hpp  fts5_search_engine.hpp  importance_scorer.hpp  live_set_rewrite.hpp  maintenance.hpp  memory_orchestrator.hpp  mv2v_format.hpp  pch.hpp  query_analyzer.hpp  runtime_model_config.hpp  search.hpp  structured_memory.hpp  surrogate_generator.hpp  text_chunker.hpp  tier_selector.hpp  token_counter.hpp  types.hpp  vector_engine.hpp  vector_math.hpp  wax_store.hpp
logs/: .gitkeep  README.md
manifest/: libtorch-manifest.json
mcp/: mcp.json  package-lock.json  package.json  wax_mcp_server.js
mcp/test/: bp_tools.test.js
scripts/: es_setup_bp_index.py  generate_bp_purposes.py  index_bp_to_es.py  parse_bp_facts.py  query_bp.py  run_full_reindex.ps1  setup_embedding.ps1  start_llama.bat  start_services.ps1  tail_logs.ps1  test_embed_roundtrip.py  verify_submodules.py  wax.ps1
server/: CMakeLists.txt  bpl_json_compressor.cpp  bpl_json_compressor.hpp  bpl_json_patch_compiler.cpp  bpl_json_patch_compiler.hpp  bpl_structural_enricher.cpp  bpl_structural_enricher.hpp  chunk_enricher.hpp  fact_service.cpp  fact_service.hpp  index_job_manager.cpp  index_job_manager.hpp  json_rpc.cpp  json_rpc.hpp  llama_cpp_embedding_provider.cpp  llama_cpp_embedding_provider.hpp  llama_cpp_generation_client.cpp  llama_cpp_generation_client.hpp  llm_fact_enricher.cpp  llm_fact_enricher.hpp  main.cpp  regex_ue5_enricher.cpp  regex_ue5_enricher.hpp  runtime_config.cpp  runtime_config.hpp  server_utils.cpp  server_utils.hpp  ue5_chunk_manifest.cpp  ue5_chunk_manifest.hpp  ue5_filesystem_scanner.cpp  ue5_filesystem_scanner.hpp  wax_rag_handler.cpp  wax_rag_handler.hpp
services/embedding/: .env.example  README.md  app.py  bp_refresh.py  config.py  requirements.txt
src/core/: mv2s_format.cpp  mv2s_format.hpp  sha256.cpp  sha256.hpp  wal_ring.cpp  wal_ring.hpp  wax_store.cpp  wax_store_test_hooks.hpp
src/orchestrator/: memory_orchestrator.cpp
src/rag/: access_stats.cpp  answer_extractor.cpp  embedding_memoizer.cpp  embeddings.cpp  importance_scorer.cpp  live_set_rewrite.cpp  maintenance.cpp  query_analyzer.cpp  runtime_model_config.cpp  search.cpp  surrogate_generator.cpp  text_chunker.cpp  tier_selector.cpp  token_counter.cpp  vector_math.cpp
src/text/: fts5_search_engine.cpp  structured_memory_store.cpp
src/vector/: mv2v_format.cpp  usearch_vector_engine.cpp
tests/: temp_artifacts.hpp  test_env_guard.hpp  test_logger.hpp  test_temp_dir.hpp
tests/integration/: README.md  ue5-query-pack.json
tests/parity/: README.md  mv2s_fixture_generator.cpp  mv2s_fixture_parity_test.cpp
tests/python/: conftest.py  test_bp_refresh.py  test_generate_bp_purposes.py  test_index_payload.py  test_parse_bp_facts.py
tests/python/fixtures/: abp_pistol.bpl_json  b_lyra_gamemode.bpl_json  ga_spawn_effect.bpl_json  w_respawn_timer.bpl_json
tests/unit/: access_stats_test.cpp  answer_extractor_test.cpp  bpl_json_compressor_test.cpp  bpl_json_patch_compiler_test.cpp  bpl_structural_enricher_test.cpp  embedding_memoizer_test.cpp  embeddings_test.cpp  fts5_search_engine_test.cpp  importance_scorer_test.cpp  index_job_manager_test.cpp  intent_rerank_test.cpp  libtorch_manifest_gate_test.cpp  live_set_rewrite_test.cpp  llama_cpp_embedding_provider_test.cpp  llama_cpp_generation_client_test.cpp  llm_fact_enricher_test.cpp  maintenance_test.cpp  memory_orchestrator_test.cpp  mv2s_format_test.cpp  mv2v_format_test.cpp  query_analyzer_test.cpp  regex_ue5_enricher_test.cpp  runtime_model_config_test.cpp  search_test.cpp  smoke_test.cpp  structured_memory_store_test.cpp  surrogate_generator_test.cpp  text_chunker_test.cpp  tier_selector_test.cpp  token_counter_test.cpp  ue5_chunk_manifest_test.cpp  ue5_filesystem_scanner_test.cpp  usearch_vector_engine_test.cpp  vector_math_test.cpp  wal_ring_test.cpp  wal_ring_writer_test.cpp  wax_rag_handler_answer_test.cpp  wax_rag_handler_index_test.cpp  wax_store_bulk_ingest_test.cpp  wax_store_verify_test.cpp  (+1 more)
tools/: bpl_structural_enricher_poc.cpp  mv2s_analyzer.cpp  mv2s_vacuum.cpp
ue5_sandbox/: check_olivavanilla_blueprints_resume.bat  check_olivavanilla_blueprints_resume.ps1  check_olivavanilla_code_resume.bat  check_olivavanilla_code_resume.ps1  export_oliva_blueprints.bat  export_olivavanilla_blueprints.bat  index_oliva.bat  index_oliva_blueprints.bat  index_olivavanilla_blueprints.bat  index_olivavanilla_code.bat  index_status.bat  index_ue5_source.bat  resume_oliva_blueprints.bat  resume_olivavanilla_blueprints.bat  start_llama_enrich.bat  start_llama_enrich_qwen25_code.bat  start_wax_server.bat  start_wax_server_openai_gptmini.bat  start_wax_server_qwen25_code.bat  stitch_avs_vehicle_input_facts.bat  stitch_avs_vehicle_input_facts.ps1
